--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "@logtail/node": "^0.5.6",
     "@logtail/winston": "^0.5.6",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "bull": "^4.16.5",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "geoip-lite": "^1.4.10",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "logger": "^0.0.1",
     "mongoose": "^9.1.5",
+    "rate-limit-redis": "^4.3.1",
+    "redis": "^5.10.0",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
