--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "jsonwebtoken": "^9.0.3",
     "logger": "^0.0.1",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
+    "pdfkit": "^0.17.2",
     "rate-limit-redis": "^4.3.1",
     "redis": "^5.10.0",
+    "streamifier": "^0.1.1",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
