--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rate-limit-redis": "^4.3.1",
     "redis": "^5.10.0",
     "streamifier": "^0.1.1",
+    "tesseract.js": "^7.0.0",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
